--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>I will attempt a branch.</p>
         <button  @click="toggle=!toggle"> Click this </button>
         <div v-if="toggle" class="boxed"></div>
+        <div v-if="!toggle" class="circle">>/div>
     </div>
 </body>
 
@@ -33,5 +34,12 @@
         width: 200px;
         margin-top: 2em;
     }
+    .circle{
+          height: 25px;
+          width: 25px;
+          background-color: black;
+          border-radius: 50%;
+          display: inline-block;
+}
 </style>
 </html>
