--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </script>
 <style>
     .boxed{
-        background-color: darkorchid;
+        background-color: brown;
         height: 200px;
         width: 200px;
         margin-top: 2em;
@@ -38,7 +38,7 @@
     .circle{
           height: 25px;
           width: 25px;
-          background-color: black;
+          background-color: brown;
           border-radius: 50%;
           display: inline-block;
           margin:  2em;
@@ -50,10 +50,11 @@
     }
     p{
         border: 5px solid;
-        text-align: center;
+        justify-content: center;
         background-color: bisque;
         color: brown;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        padding: 1em;
     }
     h1{
         text-align: center;
@@ -63,6 +64,8 @@
         min-height: 2em;
         min-width: 2em;
         padding: 1em;
+        justify-content: center;
+        display: flex;
     }
 </style>
 </html>
